--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -102,7 +102,7 @@ const posts = (await getCollection('blog')).sort(
 				<ul>
 					<li>
 						<div id="yt-wrapper">
-							<YouTube id="nhGkIW7Dh1Q" /> 
+							<YouTube id="jfKfPfyJRdk" /> 
 						</div>
 						<h4 class="title">NU Video Vlog</h4>
 						<p class="date">September 13, 2013</p>
