--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -51,6 +51,8 @@ const posts = (await getCollection('blog')).sort(
 
 			ul li:first-child img {
 				width: 100%;
+        object-fit: cover;
+        max-height: 600px;
 			}
 			ul li:first-child .title {
 				font-size: 2.369rem;
@@ -100,6 +102,7 @@ const posts = (await getCollection('blog')).sort(
 		<main>
 			<section>
 				<ul>
+          <!--- 
 					<li>
 						<div id="yt-wrapper">
 							<YouTube id="jfKfPfyJRdk" /> 
@@ -107,6 +110,7 @@ const posts = (await getCollection('blog')).sort(
 						<h4 class="title">NU Video Vlog</h4>
 						<p class="date">September 13, 2013</p>
 					</li>
+--->
 					{
 						posts.map((post) => (
 							<li>
